css/roughwork_01.css
@font-face {
    font-family: 'suisse_intllight';
    src: url('../fonts/suisseintl-light-webfont.woff2') format('woff2'),
         url('../fonts/suisseintl-light-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'suisse_intllight_italic';
    src: url('../fonts/suisseintl-lightitalic-webfont.woff2') format('woff2'),
         url('../fonts/suisseintl-lightitalic-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'suisse_intlbook';
    src: url('../fonts/suisseintl-book-webfont.woff2') format('woff2'),
         url('../fonts/suisseintl-book-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'suisse_intlregular';
    src: url('../fonts/suisseintl-regular-webfont.woff2') format('woff2'),
         url('../fonts/suisseintl-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'suisse_intlregular_italic';
    src: url('../fonts/suisseintl-regularitalic-webfont.woff2') format('woff2'),
         url('../fonts/suisseintl-regularitalic-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'suisse_intlmedium';
    src: url('../fonts/suisseintl-medium-webfont.woff2') format('woff2'),
         url('../fonts/suisseintl-medium-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}




@font-face {
    font-family: 'suisse_intlbold';
    src: url('../fonts/suisseintl-bold-webfont.woff2') format('woff2'),
         url('../fonts/suisseintl-bold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

body{
    background-color: #161616 !important;
    }

#comingsoon{
    align-content: center;
    padding-top: 40vh;
}

a{
color: white !important;    
}

a:hover{
    text-decoration: none !important;
}

p{
    font-family: 'suisse_intllight'!important;
    color: white !important;
    font-size: 12pt !important;
    line-height: 15pt !important;
    
}

h0{
    font-family: 'suisse_intlbold';
    font-size: 10vw;
    line-height:9vw;
    color: white !important;
    
}

h1{
    font-family: 'suisse_intlbold'!important;
    font-size: 80pt !important;
    line-height: 70pt !important;
    color: white !important;
}

h2{
    font-family: 'suisse_intlregular'!important;
    font-size: 20pt!important;
    line-height: 25pt!important;
    color: white !important;
}

h3{
    font-family: 'suisse_intllight_italic'!important;
    font-size: 20pt!important;
    line-height: 25pt!important;
    color: white !important;
}

h3:before {
  content: '“';
  position: absolute;
  margin-left: -1em;
  width: 1em;
  text-align: right;
}

h3:after {
    content: '”';
}


h5{
    font-family: 'suisse_intlregular'!important;
    font-size: 12pt !important;
    line-height: 15pt !important;
    color: white !important;
}



#project_info{
    padding-top: 50px;
    
}

#project_title{
    margin-bottom: 0pt !important;
}

#project_kind{
  margin-bottom: 25pt !important;  
}

#project_rationale{
    padding-bottom: 50px
}

.banished_rationale::selection{
    
    background-color: #EF5322;
}

.jass_rationale::selection{
    
    background-color: #EE272C;
}

.hightech_rationale::selection{
    
    background-color: deepskyblue;
}

.fewr_rationale::selection{
    background-color:#2BDE73;
    
        
}


.page-footer{
   padding-right: 20px;
    padding-bottom: 5px;
    padding-top: 5px;
}

#get_in_touch{
    padding-top: 15px;
    padding-right: 15px;
}

.fa-envelope{
    color: white;
    font-size: 30px;
    padding: 10px; 
}


.fa-instagram{
    color: white;
    font-size: 30px;
    padding: 10px;
}

.fa-mobile-alt{
    color: white;
    font-size: 30px;
    padding: 10px;
}



#more_projects{
   padding-top: 10px; 
}





svg{
    fill: white;
    width: 80px;
    height: auto;
    padding-top: 10px;
    z-index: 199;
    
}




.nav-link{
    font-family: 'suisse_intlregular';
    font-size: 12pt !important;
    line-height: 15pt !important;
    color: white !important;
    filter: drop-shadow(0 0 50px #333);
}

button span {
    /*overwriting*/
    color: white;
    font-size: 30px;
}

#topvid{
    
}

#topvid_mobile{
    
}

.header_title{
  opacity: 1;
  -webkit-transition: opacity 1.5s ease-out;
  -moz-transition: opacity 1.5s ease-out;
  -ms-transition: opacity 1.5s ease-out;
  -o-transition: opacity 1.5s ease-out;
  transition: opacity 1.5s ease-out;
}

#work{
    z-index: 100;
    background-color: #161616 !important;
    margin-top: 15px
}

#banished-link{
    
}

#jass-link{
    
}

.banished_thumbnail .img-top {
        display: none;
        position:absolute;
        top: 0;
        left:0;
    bottom: 0;
        padding: 0 15px;
        z-index: 100;
    }
    .banished_thumbnail:hover .img-top {
        display:inline;
        position:absolute;
       
    }

.jass_thumbnail .img-top {
        display: none;
        position:absolute;
        top: 0;
        left:0;
    bottom: 0;
        padding: 0 15px;
        z-index: 100;
    }
    .jass_thumbnail:hover .img-top {
        display:inline;
        position:absolute;
       
    }

.showus_thumbnail .img-top {
        display: none;
        position:absolute;
        top: 0;
        left:0;
    bottom: 0;
        padding: 0 15px;
        z-index: 100;
    }
    .showus_thumbnail:hover .img-top {
        display:inline;
        position:absolute;
       
    }

.tanger_thumbnail .img-top {
        display: none;
        position:absolute;
        top: 0;
        left:0;
    bottom: 0;
        padding: 0 15px;
        z-index: 100;
    }
    .tanger_thumbnail:hover .img-top {
        display:inline;
        position:absolute;
       
    }

.project{
    margin-top: -70px; 
}

#project_image{
    padding-top: 30px;
    padding-bottom: 20px;
}

.project_image_description{
        padding-top: 10px;
    /*padding-left: 15px;*/
    margin-bottom: -25px;
    }

.vimeo_fullwidth{
    padding-left: 0px !important;
    padding-right: 0px !important;
}


/* 
# Responsive breakpoints
# https://getbootstrap.com/docs/4.0/layout/overview/#responsive-breakpoints
Extra small   <576px  	.col-
Small         ≥576px    .col-sm-
Medium        ≥768px    .col-md-
Large         ≥992px    .col-lg-
Extra large   ≥1200px   .col-xl-
*/


/* Apply these rules if the screen width is LESS than 576px */

@media(max-width:576px){
    #topvid{
    display: none !important;
    }
    
    
    
    #header_title{
    position: fixed;
    margin-top: -450px;
/*    margin-left: 100px;*/
    z-index: 0;
    }
    
    .roughwork_logo_top{
        width: 250px;
    }
}

/* Apply these rules if the screen width is GREATER than 576px */

@media (min-width: 576px) {
  #topvid_mobile{
    display: none !important;
    }
    
    #header_title{
    position: fixed;
    margin-top: -550px;
    z-index: 0;
        
    }
    
    .roughwork_logo_top{
        width: 500px;
    }
}

/* Apply these rules if the screen width is LESS than 768px */

@media (max-width: 768px) {
    
    
    
    
    
    
    #work{
        display: none !important;
    }
    
    .thumbnail_mobile{
        padding-bottom: 40px;
    }
    
    .thumbnail_title_mobile{
        padding-top: 20px;
    }
    
    h1{
    font-family: 'suisse_intlbold'!important;
    font-size: 40pt !important;
    line-height: 35pt !important;
    color: white !important;
    }
    
    h2{
    font-family: 'suisse_intlregular'!important;
    font-size: 16pt!important;
    line-height: 20pt!important;
    color: white !important;
}
    
    h3{
    font-family: 'suisse_intllight_italic'!important;
    font-size: 16pt!important;
    line-height: 20pt!important;
    color: white !important;
}

    
    
    #project_image{
        padding-top: 20px;
        padding-bottom: 10px;
    }
    
    .project_image_description{
        padding-left: 15px;
        margin-top: -5px;
        margin-bottom: 0px !important;
    }
    
    .page-footer{
        float: right;
    }
    
    .img-fluid{
    padding-top: 10px !important;
    padding-bottom: 10px !important;
    }

}

/* Apply these rules if the screen width is GREATER than 768px */

@media (min-width: 768px) {
  
    
    
    .introvid{
        margin-top: -70px;
    }
    
    
   
    .navbar-nav{
        padding-top: 10px;
    }
    
    #intro_text, #about_us{
        margin-top: -550px;
    }
    
    #work_mobile{
        display: none !important;
    }
    
    #work{
    padding-left: 30px;
    padding-right: 30px;
    overflow: hidden;
    z-index: 100;
    
}

.thumbnails{
    padding-top: 15px;
    padding-bottom: 15px;
}

    .rationale{
        position: fixed;
    }
    


}

/* Apply these rules if the screen width is LESS than 992px */

@media (max-width: 992px){
    #nav{
        background-color: #161616;
    }
    
    .nav-item{
        font-size: 16px !important;
        text-align: center;
    }
    
    .nav-link{
        font-family: 'suisse_intlregular';
        font-size: 20pt !important;
        line-height: 25pt !important;
    }
    
    .project{
        padding-top: 65px;
    }
}

/* Apply these rules if the screen width is GREATER than 992px */

@media (min-width: 992px) {
    .thumbnails{
        height: auto;
        width: auto;
        object-fit:cover;
    }
    
    #work{
        height: auto;
        width: auto;
    }
}

/* Apply these rules if the screen width is GREATER than 1200px */

@media (min-width: 1200px) {
  
}

